syntax = 'proto3';
package com.linkedin.venice.protocols;

option java_multiple_files = true;

service VeniceReadService {
  rpc get (VeniceClientRequest) returns (VeniceServerResponse) {}
  rpc batchGet(VeniceClientRequest) returns (VeniceServerResponse) {}
}

message VeniceClientRequest {
  uint32 partition = 1;
  string keyString = 2;           // used for single get
  bytes  keyBytes = 3;            // used for batch get
  sint32 requestTimeoutInNS = 4;
  string resourceName = 5;
  string storeName = 6;
  bool   isStreamingRequest = 7;
  bool   isRetryRequest = 8;
  bool   isBatchRequest = 9;      // change to int and enum to be able to handle non-storage reqs (future feature)
  enum   requestType {
    STORAGE    = 0;
    COMPUTE    = 1;
    HEALTH     = 2;
    DICTIONARY = 3;
    ADMIN      = 4;
    METADATA   = 5;
  }
}

message VeniceServerResponse {
  sint32 schemaId = 1;
  bytes  data = 2;
  uint32 dataSize = 3;
  bytes  serializedArr = 4;

  uint32 compressionStrategy = 5;
  uint32 responseRCU = 6;
  bool   isStreamingResponse = 7;
}